--- a/.github/workflows/cloud-run.yaml
+++ b/.github/workflows/cloud-run.yaml
@@ -7,7 +7,7 @@ on:
 env:
   REGISTRY: ${{ secrets.GCP_REGION }}-docker.pkg.dev
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-  REPOSITORY: ${{ secrets.GCP_REPOSITORY }}
+  REPOSITORY: ${{ secrets.GCP_APP_NAME }}
   IMAGE_NAME: ${{ secrets.GCP_APP_NAME }}
   REGION: ${{ secrets.GCP_REGION }}
   GCP_SERVICE_ACCOUNT_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
