--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "jose": "^6.0.11",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.488.0",
-    "next": "15.3.0",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
-    "react": "^19.0.0",
+    "react": "^19.1.2",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.0",
     "recharts": "^3.0.2",
